添加了小爱同学、html支持，并且优化加载

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,14 @@
     <string name="terms_title">用户使用协议</string>
     <string name="terms_button_text">协议书</string>
 
+
+    <string name="introduce_text">
+        "今日课表"是一款面向学生的安卓应用程序，它可以帮助学生管理和规划自己的学习日程。用户可以在应用内设置自己的课程计划，包括课程名称、时间和地点，方便地了解每天的上课情况。同时，"今日课表"还提供最新的校园新闻和公告，让用户时刻保持对学校的动态熟悉和了解。此外，应用还提供了学生论坛功能，用户可以在这里互相交流，分享学习经验和心得体会。"今日课表"是一款极为简单易用的应用程序，让用户更轻松自如地管理自己的学习生活。
+    </string>
+    <string name="authors_text">制作人员名单:xxx xxx xxx xxx xxx xxx</string>
+    <string name="github_link_text">
+        如果你闲得无聊，可以去我们的github页面上点个star!
+    </string>
     <string name="privacy_agreement_text">
   <![CDATA[
     在此特别提醒您在注册成为用户之前，请认真阅读本《用户协议》 \n确保您充分理解本协议中各条款。请您审慎阅读并选择接受或不接受本协议。\n您的注册、登录、使用等行为将视为对本协议的接受，并同意接受本协议各项条款的约束。本协议约定与今日校园的权利义务。“用户”是指注册、登录、使用本服务的个人。本协议可由今日校园随时更新，更新后的协议条款一旦公布即代替原来的协议条款，恕不再另行通知，用户可在本APP中查阅最新版协议条款。在修改协议条款后，如果用户不接受修改后的条款，请立即停止使用海淀公共文化提供的服务，用户继续使用服务将被视为接受修改后的协议。
